Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>lisker by lisker</title>
+    <title>氪记生活 by lisker</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>lisker</h1>
+        <h1>氪记生活</h1>
         <p>Thoughts, stories and ideas.</p>
         <p class="view"><a href="https://github.com/lisker">View the Project on GitHub <small>lisker</small></a></p>
         <ul>
