抽奖页完善

--- a/mbx/框架内容_2.html
+++ b/mbx/框架内容_2.html
@@ -112,7 +112,7 @@
               <img id="u12_img" class="img " src="images/框架内容_2/u12.png"/>
               <!-- Unnamed () -->
               <div id="u13" class="text">
-                <p><span style="font-family:'', '', '应用字体';">活动期间用户每成功邀请一位新用户参与送花，邀请人便获得一枚额外的小红花为自己支持的宝贝助力。另外每位用户每日还有一次抽奖机会，累积送出的红花越多，中奖几率越大。</span></p>
+                <p><span style="font-family:'', '', '应用字体';">活动期间用户每成功邀请一位新用户参与送花，邀请人便获得一枚额外的小红花为自己支持的宝贝助力。</span></p>
               </div>
             </div>
 
