--- a/mbx/框架内容_5.html
+++ b/mbx/框架内容_5.html
@@ -48,6 +48,121 @@
   </head>
   <body>
     <div id="base" class="">
+
+      <!-- 主体 (动态面板) -->
+      <div id="u0" class="ax_动态面板" data-label="主体">
+        <div id="u0_state0" class="panel_state" data-label="首页">
+          <div id="u0_state0_content" class="panel_state_content">
+
+            <!-- 头部 (动态面板) -->
+            <div id="u1" class="ax_动态面板" data-label="头部">
+              <div id="u1_state0" class="panel_state" data-label="状态1">
+                <div id="u1_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u2" class="ax_形状">
+                    <img id="u2_img" class="img " src="images/框架内容/u2.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u3" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (图片) -->
+                  <div id="u4" class="ax_图片">
+                    <img id="u4_img" class="img " src="images/框架内容/u4.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u5" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u6" class="ax_文本" data-label="paragraph">
+                    <img id="u6_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u7" class="text">
+                      <p><span style="font-family:'', '', '应用字体';">萌宝秀邀请</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (图片) -->
+                  <div id="u8" class="ax_图片">
+                    <img id="u8_img" class="img " src="images/框架内容/u8.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u9" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u10" class="ax_形状">
+              <img id="u10_img" class="img " src="images/框架内容_2/u10.png"/>
+              <!-- Unnamed () -->
+              <div id="u11" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u12" class="ax_文本">
+              <img id="u12_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u13" class="text">
+                <p><span style="font-family:'', '', '应用字体';">HI，告诉你一个给力的活动，河南交通广播正在举行2015萌宝秀评选，参与送花给宝贝助力就有大奖能拿，赶紧下载客户端和我一起冲刺大奖吧</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u14" class="ax_形状">
+              <img id="u14_img" class="img " src="images/框架内容_5/u14.png"/>
+              <!-- Unnamed () -->
+              <div id="u15" class="text">
+                <p><span style="font-family:'', '', '应用字体';">邀请人</span></p><p><span style="font-family:'', '', '应用字体';">头像</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u16" class="ax_文本">
+              <img id="u16_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u17" class="text">
+                <p><span style="font-family:'', '', '应用字体';">lisker</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u18" class="ax_形状">
+              <img id="u18_img" class="img " src="images/框架内容_5/u18.png"/>
+              <!-- Unnamed () -->
+              <div id="u19" class="text">
+                <p><span style="font-family:'', '', '应用字体';">萌宝秀活动期间每成功邀请一位新用户参与送花助力，邀请人便获得一次额外的送花权益（不限时间可累积），可为自己支持的宝贝助力。</span></p><p><span style="font-family:'', '', '应用字体';">&nbsp;</span></p><p><span style="font-family:'', '', '应用字体';">活动期间APP上将进行每日抽奖活动，累积送出的红花越多的用户，中奖的几率越大。</span></p><p><span style="font-family:'', '', '应用字体';">&nbsp;</span></p><p><span style="font-family:'', '', '应用字体';">活动最后我们还将为送花助力最多的用户颁发萌宝助力王大奖。</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u20" class="ax_形状">
+              <img id="u20_img" class="img " src="images/框架内容_2/u14.png"/>
+              <!-- Unnamed () -->
+              <div id="u21" class="text">
+                <p><span style="font-family:'', '', '应用字体';">红花送不停，助力赢大奖</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u22" class="ax_形状">
+              <img id="u22_img" class="img " src="images/框架内容_2/u16.png"/>
+              <!-- Unnamed () -->
+              <div id="u23" class="text">
+                <p><span style="font-family:'', '', '应用字体';">立即下载客户端为宝贝助力</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
