--- a/mbx/框架内容_8.html
+++ b/mbx/框架内容_8.html
@@ -48,6 +48,139 @@
   </head>
   <body>
     <div id="base" class="">
+
+      <!-- 主体 (动态面板) -->
+      <div id="u0" class="ax_动态面板" data-label="主体">
+        <div id="u0_state0" class="panel_state" data-label="首页">
+          <div id="u0_state0_content" class="panel_state_content">
+
+            <!-- 头部 (动态面板) -->
+            <div id="u1" class="ax_动态面板" data-label="头部">
+              <div id="u1_state0" class="panel_state" data-label="状态1">
+                <div id="u1_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u2" class="ax_形状">
+                    <img id="u2_img" class="img " src="images/框架内容/u2.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u3" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (图片) -->
+                  <div id="u4" class="ax_图片">
+                    <img id="u4_img" class="img " src="images/框架内容/u4.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u5" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u6" class="ax_文本" data-label="paragraph">
+                    <img id="u6_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u7" class="text">
+                      <p><span style="font-family:'', '', '应用字体';">我的抽奖</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (图片) -->
+                  <div id="u8" class="ax_图片">
+                    <img id="u8_img" class="img " src="images/框架内容/u8.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u9" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u10" class="ax_形状">
+              <img id="u10_img" class="img " src="images/框架内容_8/u10.png"/>
+              <!-- Unnamed () -->
+              <div id="u11" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u12" class="ax_形状">
+              <img id="u12_img" class="img " src="images/框架内容_8/u12.png"/>
+              <!-- Unnamed () -->
+              <div id="u13" class="text">
+                <p><span style="font-family:'', '', '应用字体';">奖品海报</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u14" class="ax_形状">
+              <img id="u14_img" class="img " src="images/框架内容_8/u14.png"/>
+              <!-- Unnamed () -->
+              <div id="u15" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u16" class="ax_形状">
+              <img id="u16_img" class="img " src="images/框架内容_8/u16.png"/>
+              <!-- Unnamed () -->
+              <div id="u17" class="text">
+                <p><span style="font-family:'', '', '应用字体';font-weight:200;">立即抽奖</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u18" class="ax_形状">
+              <img id="u18_img" class="img " src="images/框架内容_8/u18.png"/>
+              <!-- Unnamed () -->
+              <div id="u19" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u20" class="ax_文本">
+              <img id="u20_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u21" class="text">
+                <p><span style="font-family:'', '', '应用字体';">价值：100元RMB</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u22" class="ax_文本">
+              <img id="u22_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u23" class="text">
+                <p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">活动简介：</span><span style="font-family:'', '', '应用字体';font-size:14px;"></span></p><p style="font-size:12px;"><span style="font-family:'', '', '应用字体';font-size:12px;">萌宝秀活动期间，每天推出一款商品进行抽奖</span><span style="font-family:'', '', '应用字体';font-size:12px;"></span></p><p style="font-size:12px;"><span style="font-family:'', '', '应用字体';font-size:12px;">所有今日参与送花活动的用户都有一次抽奖机会</span><span style="font-family:'', '', '应用字体';font-size:12px;"></span></p><p style="font-size:12px;"><span style="font-family:'', '', '应用字体';font-size:12px;">用户累计送花次数越多，中奖几率越大</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u24" class="ax_文本">
+              <img id="u24_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u25" class="text">
+                <p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">奖品兑换流程：</span><span style="font-family:'', '', '应用字体';font-size:14px;"></span></p><p style="font-size:12px;"><span style="font-family:'', '', '应用字体';font-size:12px;">1.点击【立即抽奖】有机会获得XXX提供的XXX奖品</span><span style="font-family:'', '', '应用字体';font-size:12px;"></span></p><p style="font-size:12px;"><span style="font-family:'', '', '应用字体';font-size:12px;">2.</span><span style="font-family:'', '', '应用字体';font-size:12px;">我们会在活动结束后</span><span style="font-family:'', '', '应用字体';font-size:12px;">5</span><span style="font-family:'', '', '应用字体';font-size:12px;">个工作日内通知中奖用户，在此期间请保持电话畅通。</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u26" class="ax_形状">
+              <img id="u26_img" class="img " src="images/框架内容_8/u26.png"/>
+              <!-- Unnamed () -->
+              <div id="u27" class="text">
+                <p><span style="font-family:'', '', '应用字体';">商品宣传图</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
