--- a/mbx/框架内容.html
+++ b/mbx/框架内容.html
@@ -473,6 +473,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u89" class="ax_形状">
+        <img id="u89_img" class="img " src="images/交广活动/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u90" class="text">
+          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">交广活动首页：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体顶部：以大图幻灯的形式展示推荐的活动，自动幻灯切换。幻灯下方为最新报名和最新抽奖入口。</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&#149; 主体界面：活动资讯列表按时间顺序展示其他活动。</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">主体顶部大幻灯：载入时自动切换，手指左右滑动左右切换，点击进入活动详情</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">活动抽奖按钮：点击进入每日抽奖页</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">活动报名按钮：点击进入正在报名页</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
