--- a/mbx/框架内容_2.html
+++ b/mbx/框架内容_2.html
@@ -181,6 +181,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u28" class="ax_形状">
+        <img id="u28_img" class="img " src="images/交广活动/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u29" class="text">
+          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">活动抽奖页：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体顶部：展示抽奖奖品宣传图，价值及抽奖按钮</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&#149; 主体界面：展示活动介绍及兑换流程，如奖品有详细宣传海报下方贴出海报</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">抽奖按钮：app客户端注册用户，每日仅有一次抽奖机会。</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">中奖概率：根据用户参与评选活动送花助力的数量，用户累积送花次越多，中奖的几率越高。</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">送花数判定：用户点击抽奖时，调取此用户前一天的累计送花数据作为判定依据。</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
