--- a/mbx/框架内容_5.html
+++ b/mbx/框架内容_5.html
@@ -413,6 +413,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u80" class="ax_形状">
+        <img id="u80_img" class="img " src="images/交广活动/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u81" class="text">
+          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">活动详情页（评选）：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体顶部：展示活动海报宣传图</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&#149; 主体界面：以宫格形式展示参选宝贝，按排名顺序从先往后排，宫格上部给予搜索框以便搜索查找</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">搜索框：输入关键字搜索，直接下方显示搜索结果不跳页面</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">宫格点击：引导进入宝贝详情页</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">页面底部上拉：滚动到页面底部时，上拉加载更多内容</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
