--- a/mbx/框架内容_8.html
+++ b/mbx/框架内容_8.html
@@ -197,6 +197,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u31" class="ax_形状">
+        <img id="u31_img" class="img " src="images/交广活动/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u32" class="text">
+          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">我的活动：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体界面：展示用户参加过的活动记录，如页面展示一样有报名参选和助力赢大奖两个活动。</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">评选活动：家长报名参加评选后出现此活动，点击页面直接引导至相应参选宝贝的详情页</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">助力赢大奖：点击引导至用户分享成果页</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
