--- a/mbx/正在报名.html
+++ b/mbx/正在报名.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>活动详情（评选）</title>
+    <title>正在报名</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/活动详情（评选）/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/正在报名/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
@@ -37,7 +37,7 @@
     <script src="resources/scripts/axure/adaptive.js"></script>
     <script src="resources/scripts/axure/tree.js"></script>
     <script src="resources/scripts/axure/init.temp.js"></script>
-    <script src="files/活动详情（评选）/data.js"></script>
+    <script src="files/正在报名/data.js"></script>
     <script src="resources/scripts/axure/legacy.js"></script>
     <script src="resources/scripts/axure/viewer.js"></script>
     <script type="text/javascript">
@@ -76,7 +76,7 @@
         <img id="u4_img" class="img " src="images/交广活动/u4.png"/>
         <!-- Unnamed () -->
         <div id="u5" class="text">
-          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">活动详情页（评选）：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体顶部：展示活动海报宣传图</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&#149; 主体界面：以宫格形式展示参选宝贝，按排名顺序从先往后排，宫格上部给予搜索框以便搜索查找</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">搜索框：输入关键字搜索，直接下方显示搜索结果不跳页面</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">宫格点击：引导进入宝贝详情页</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">页面底部上拉：滚动到页面底部时，上拉加载更多内容</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
+          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">正在报名页：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体：以列表形式列出目前正在同时进行报名的活动，展示活动缩略图、活动标题、活动简介</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">缩略图：点击进入相应活动详情</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">活动标题：点击进入相应活动详情</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
         </div>
       </div>
     </div>
