--- a/mbx/框架内容_4.html
+++ b/mbx/框架内容_4.html
@@ -231,6 +231,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u38" class="ax_形状">
+        <img id="u38_img" class="img " src="images/交广活动/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u39" class="text">
+          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">活动报名页：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体界面：家长通过上传宝贝照片，填写宝贝基本信息以参加评选</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">图片上传：参照微信更换头像效果，上传图片后出现框选区域自定义剪裁图片</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
