--- a/mbx/框架内容_6.html
+++ b/mbx/框架内容_6.html
@@ -236,6 +236,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u39" class="ax_形状">
+        <img id="u39_img" class="img " src="images/交广活动/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u40" class="text">
+          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">宝贝详情页：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体界面：展示宝贝照片及目前获得的红花数和排名情况</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&#149; 下方操作区：展示当前用户今日剩余的送花权益次数，</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">立即送花按钮：判断当前用户送花权益次数，点击为当前宝贝送花一次</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">分享活动按钮：激活全屏蒙版，引导用户通过右上角分享按钮分享活动</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
