--- a/mbx/框架内容_7.html
+++ b/mbx/框架内容_7.html
@@ -230,6 +230,15 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u38" class="ax_形状">
+        <img id="u38_img" class="img " src="images/交广活动/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u39" class="text">
+          <p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">接收邀请页：</span></p><p style="font-size:16px;"><span style="font-family:'', '', '应用字体';font-size:16px;">&#149; </span><span style="font-family:'', '', '应用字体';font-size:14px;">主体界面：此页面为活动分享链接被打开后展现的页面，同样展示宝贝照片及目前获得的红花数和排名情况，</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&#149; 下方操作区：引导用户填写手机号，给宝贝送花。</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">交互提示：</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">手机号输入框：验证手机号真实性</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">短信验证码：60s之内有效，过期后才能重新获取</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">立即送花按钮：验证用户手机号，通过验证可立即送花一次。同时弹出提示，引导用户下载客户端</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p><p style="font-size:14px;"><span style="font-family:'', '', '应用字体';font-size:14px;">&nbsp;</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
