--- a/jglh/框架内容_1.html
+++ b/jglh/框架内容_1.html
@@ -214,7 +214,7 @@
               <img id="u34_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u35" class="text">
-                <p><span>方向</span></p>
+                <p><span>路况方向</span></p>
               </div>
             </div>
 
