--- a/jglh/框架内容.html
+++ b/jglh/框架内容.html
@@ -122,7 +122,7 @@
               <img id="u15_img" class="img " src="images/框架内容/u13.png"/>
               <!-- Unnamed () -->
               <div id="u16" class="text">
-                <p><span>+</span></p>
+                <p><span>路况曲线开关</span></p>
               </div>
             </div>
 
@@ -131,78 +131,69 @@
               <img id="u17_img" class="img " src="images/框架内容/u13.png"/>
               <!-- Unnamed () -->
               <div id="u18" class="text">
-                <p><span>—</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u19" class="ax_形状">
-              <img id="u19_img" class="img " src="images/框架内容/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u20" class="text">
-                <p><span>语音播</span></p><p><span>报开关</span></p>
+                <p><span>语音播</span><span></span></p><p><span>报开关</span></p>
               </div>
             </div>
 
             <!-- 路况上报 (动态面板) -->
-            <div id="u21" class="ax_动态面板" data-label="路况上报">
-              <div id="u21_state0" class="panel_state" data-label="状态2">
-                <div id="u21_state0_content" class="panel_state_content">
+            <div id="u19" class="ax_动态面板" data-label="路况上报">
+              <div id="u19_state0" class="panel_state" data-label="状态2">
+                <div id="u19_state0_content" class="panel_state_content">
 
                   <!-- Unnamed (形状) -->
-                  <div id="u22" class="ax_形状">
-                    <img id="u22_img" class="img " src="images/框架内容/u13.png"/>
+                  <div id="u20" class="ax_形状">
+                    <img id="u20_img" class="img " src="images/框架内容/u13.png"/>
                     <!-- Unnamed () -->
-                    <div id="u23" class="text">
+                    <div id="u21" class="text">
                       <p><span>键盘</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u24" class="ax_形状">
-                    <img id="u24_img" class="img " src="images/框架内容/u24.png"/>
+                  <div id="u22" class="ax_形状">
+                    <img id="u22_img" class="img " src="images/框架内容/u22.png"/>
                     <!-- Unnamed () -->
-                    <div id="u25" class="text">
+                    <div id="u23" class="text">
                       <p><span>按住语音分享路况</span></p>
                     </div>
                   </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u24" class="ax_形状">
+                    <img id="u24_img" class="img " src="images/框架内容/u13.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u25" class="text">
+                      <p><span>拍照</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="u19_state1" class="panel_state" data-label="状态3">
+                <div id="u19_state1_content" class="panel_state_content">
 
                   <!-- Unnamed (形状) -->
                   <div id="u26" class="ax_形状">
                     <img id="u26_img" class="img " src="images/框架内容/u13.png"/>
                     <!-- Unnamed () -->
                     <div id="u27" class="text">
-                      <p><span>拍照</span></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div id="u21_state1" class="panel_state" data-label="状态3">
-                <div id="u21_state1_content" class="panel_state_content">
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u28" class="ax_形状">
-                    <img id="u28_img" class="img " src="images/框架内容/u13.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u29" class="text">
                       <p><span>语音</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u30" class="ax_形状">
-                    <img id="u30_img" class="img " src="images/框架内容/u24.png"/>
+                  <div id="u28" class="ax_形状">
+                    <img id="u28_img" class="img " src="images/框架内容/u22.png"/>
                     <!-- Unnamed () -->
-                    <div id="u31" class="text">
+                    <div id="u29" class="text">
                       <p><span>输入文字分享详细路况</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u32" class="ax_形状">
-                    <img id="u32_img" class="img " src="images/框架内容/u13.png"/>
+                  <div id="u30" class="ax_形状">
+                    <img id="u30_img" class="img " src="images/框架内容/u13.png"/>
                     <!-- Unnamed () -->
-                    <div id="u33" class="text">
+                    <div id="u31" class="text">
                       <p><span>进入</span></p>
                     </div>
                   </div>
@@ -213,69 +204,69 @@
             <!-- Unnamed (底部导航) -->
 
             <!-- 底部导航 (动态面板) -->
-            <div id="u35" class="ax_动态面板" data-label="底部导航">
-              <div id="u35_state0" class="panel_state" data-label="状态1">
-                <div id="u35_state0_content" class="panel_state_content">
+            <div id="u33" class="ax_动态面板" data-label="底部导航">
+              <div id="u33_state0" class="panel_state" data-label="状态1">
+                <div id="u33_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u34" class="ax_形状">
+                    <img id="u34_img" class="img " src="images/框架内容/u34.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u35" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
 
                   <!-- Unnamed (形状) -->
                   <div id="u36" class="ax_形状">
                     <img id="u36_img" class="img " src="images/框架内容/u36.png"/>
                     <!-- Unnamed () -->
                     <div id="u37" class="text">
-                      <p><span></span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u38" class="ax_形状">
-                    <img id="u38_img" class="img " src="images/框架内容/u38.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u39" class="text">
                       <p><span>ico</span></p>
                     </div>
                   </div>
 
                   <!-- paragraph (形状) -->
-                  <div id="u40" class="ax_文本" data-label="paragraph">
-                    <img id="u40_img" class="img " src="resources/images/transparent.gif"/>
+                  <div id="u38" class="ax_文本" data-label="paragraph">
+                    <img id="u38_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
-                    <div id="u41" class="text">
+                    <div id="u39" class="text">
                       <p><span>路况</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u42" class="ax_形状">
-                    <img id="u42_img" class="img " src="images/框架内容/u38.png"/>
+                  <div id="u40" class="ax_形状">
+                    <img id="u40_img" class="img " src="images/框架内容/u36.png"/>
                     <!-- Unnamed () -->
-                    <div id="u43" class="text">
+                    <div id="u41" class="text">
                       <p><span>ico</span></p>
                     </div>
                   </div>
 
                   <!-- paragraph (形状) -->
-                  <div id="u44" class="ax_文本" data-label="paragraph">
-                    <img id="u44_img" class="img " src="resources/images/transparent.gif"/>
+                  <div id="u42" class="ax_文本" data-label="paragraph">
+                    <img id="u42_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
-                    <div id="u45" class="text">
+                    <div id="u43" class="text">
                       <p><span>直播</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u46" class="ax_形状">
-                    <img id="u46_img" class="img " src="images/框架内容/u38.png"/>
+                  <div id="u44" class="ax_形状">
+                    <img id="u44_img" class="img " src="images/框架内容/u36.png"/>
                     <!-- Unnamed () -->
-                    <div id="u47" class="text">
+                    <div id="u45" class="text">
                       <p><span>ico</span></p>
                     </div>
                   </div>
 
                   <!-- paragraph (形状) -->
-                  <div id="u48" class="ax_文本" data-label="paragraph">
-                    <img id="u48_img" class="img " src="resources/images/transparent.gif"/>
+                  <div id="u46" class="ax_文本" data-label="paragraph">
+                    <img id="u46_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
-                    <div id="u49" class="text">
+                    <div id="u47" class="text">
                       <p><span>发现</span></p>
                     </div>
                   </div>
