拍照上传更新

--- a/jglh/框架内容_2.html
+++ b/jglh/框架内容_2.html
@@ -296,6 +296,74 @@
                 <p><span></span></p>
               </div>
             </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u54" class="ax_形状">
+              <img id="u54_img" class="img " src="images/框架内容_1/u25.png"/>
+              <!-- Unnamed () -->
+              <div id="u55" class="text">
+                <p><span>南向北</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u56" class="ax_形状">
+              <img id="u56_img" class="img " src="images/框架内容_1/u25.png"/>
+              <!-- Unnamed () -->
+              <div id="u57" class="text">
+                <p><span>北向南</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u58" class="ax_形状">
+              <img id="u58_img" class="img " src="images/框架内容_1/u25.png"/>
+              <!-- Unnamed () -->
+              <div id="u59" class="text">
+                <p><span>西向东</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u60" class="ax_形状">
+              <img id="u60_img" class="img " src="images/框架内容_1/u25.png"/>
+              <!-- Unnamed () -->
+              <div id="u61" class="text">
+                <p><span>东向西</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u62" class="ax_文本">
+              <img id="u62_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u63" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (水平线) -->
+            <div id="u64" class="ax_水平线">
+              <img id="u64_start" class="img " src="resources/images/transparent.gif" alt="u64_start"/>
+              <img id="u64_end" class="img " src="resources/images/transparent.gif" alt="u64_end"/>
+              <img id="u64_line" class="img " src="images/框架内容_1/u33_line.png" alt="u64_line"/>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u65" class="ax_文本">
+              <img id="u65_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u66" class="text">
+                <p><span>路况方向</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (水平线) -->
+            <div id="u67" class="ax_水平线">
+              <img id="u67_start" class="img " src="resources/images/transparent.gif" alt="u67_start"/>
+              <img id="u67_end" class="img " src="resources/images/transparent.gif" alt="u67_end"/>
+              <img id="u67_line" class="img " src="images/框架内容_1/u33_line.png" alt="u67_line"/>
+            </div>
           </div>
         </div>
       </div>
