--- a/jglh/框架内容_2.html
+++ b/jglh/框架内容_2.html
@@ -218,7 +218,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u37" class="ax_图片">
-              <img id="u37_img" class="img " src="images/框架内容_2/u37.png"/>
+              <img id="u37_img" class="img " src="images/框架内容/u10.png"/>
               <!-- Unnamed () -->
               <div id="u38" class="text">
                 <p><span></span></p>
@@ -376,7 +376,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u70" class="ax_图片">
-              <img id="u70_img" class="img " src="images/框架内容_2/u37.png"/>
+              <img id="u70_img" class="img " src="images/框架内容/u10.png"/>
               <!-- Unnamed () -->
               <div id="u71" class="text">
                 <p><span></span></p>
