--- a/jglh/框架内容_6.html
+++ b/jglh/框架内容_6.html
@@ -79,7 +79,7 @@
 
                   <!-- Unnamed (图片) -->
                   <div id="u6" class="ax_图片">
-                    <img id="u6_img" class="img " src="images/框架内容_2/u37.png"/>
+                    <img id="u6_img" class="img " src="images/框架内容/u10.png"/>
                     <!-- Unnamed () -->
                     <div id="u7" class="text">
                       <p><span></span></p>
