--- a/jglh/框架内容.html
+++ b/jglh/框架内容.html
@@ -54,146 +54,154 @@
         <div id="u0_state0" class="panel_state" data-label="状态1">
           <div id="u0_state0_content" class="panel_state_content">
 
+            <!-- 头部 (动态面板) -->
+            <div id="u1" class="ax_动态面板" data-label="头部">
+              <div id="u1_state0" class="panel_state" data-label="状态1">
+                <div id="u1_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u2" class="ax_形状">
+                    <img id="u2_img" class="img " src="images/框架内容/u2.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u3" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u4" class="ax_文本" data-label="paragraph">
+                    <img id="u4_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u5" class="text">
+                      <p><span>路况</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (图片) -->
+                  <div id="u6" class="ax_图片">
+                    <img id="u6_img" class="img " src="images/框架内容/u6.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u7" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (图片) -->
+                  <div id="u8" class="ax_图片">
+                    <img id="u8_img" class="img " src="images/框架内容/u8.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u9" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (图片) -->
+                  <div id="u10" class="ax_图片">
+                    <img id="u10_img" class="img " src="images/框架内容/u10.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u11" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <!-- Unnamed (形状) -->
-            <div id="u1" class="ax_形状">
-              <img id="u1_img" class="img " src="images/框架内容/u1.png"/>
+            <div id="u12" class="ax_形状">
+              <img id="u12_img" class="img " src="images/框架内容/u12.png"/>
               <!-- Unnamed () -->
-              <div id="u2" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u3" class="ax_图片">
-              <img id="u3_img" class="img " src="images/框架内容/u3.png"/>
-              <!-- Unnamed () -->
-              <div id="u4" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- paragraph (形状) -->
-            <div id="u5" class="ax_文本" data-label="paragraph">
-              <img id="u5_img" class="img " src="resources/images/transparent.gif"/>
-              <!-- Unnamed () -->
-              <div id="u6" class="text">
-                <p><span>路况</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u7" class="ax_图片">
-              <img id="u7_img" class="img " src="images/框架内容/u7.png"/>
-              <!-- Unnamed () -->
-              <div id="u8" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u9" class="ax_图片">
-              <img id="u9_img" class="img " src="images/框架内容/u9.png"/>
-              <!-- Unnamed () -->
-              <div id="u10" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u11" class="ax_形状">
-              <img id="u11_img" class="img " src="images/框架内容/u11.png"/>
-              <!-- Unnamed () -->
-              <div id="u12" class="text">
+              <div id="u13" class="text">
                 <p><span>全屏地图</span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u13" class="ax_形状">
-              <img id="u13_img" class="img " src="images/框架内容/u13.png"/>
+            <div id="u14" class="ax_形状">
+              <img id="u14_img" class="img " src="images/框架内容/u14.png"/>
               <!-- Unnamed () -->
-              <div id="u14" class="text">
+              <div id="u15" class="text">
                 <p><span>定位</span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u15" class="ax_形状">
-              <img id="u15_img" class="img " src="images/框架内容/u13.png"/>
+            <div id="u16" class="ax_形状">
+              <img id="u16_img" class="img " src="images/框架内容/u14.png"/>
               <!-- Unnamed () -->
-              <div id="u16" class="text">
+              <div id="u17" class="text">
                 <p><span>路况曲线开关</span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u17" class="ax_形状">
-              <img id="u17_img" class="img " src="images/框架内容/u13.png"/>
+            <div id="u18" class="ax_形状">
+              <img id="u18_img" class="img " src="images/框架内容/u14.png"/>
               <!-- Unnamed () -->
-              <div id="u18" class="text">
+              <div id="u19" class="text">
                 <p><span>语音播</span><span></span></p><p><span>报开关</span></p>
               </div>
             </div>
 
             <!-- 路况上报 (动态面板) -->
-            <div id="u19" class="ax_动态面板" data-label="路况上报">
-              <div id="u19_state0" class="panel_state" data-label="状态2">
-                <div id="u19_state0_content" class="panel_state_content">
+            <div id="u20" class="ax_动态面板" data-label="路况上报">
+              <div id="u20_state0" class="panel_state" data-label="状态2">
+                <div id="u20_state0_content" class="panel_state_content">
 
                   <!-- Unnamed (形状) -->
-                  <div id="u20" class="ax_形状">
-                    <img id="u20_img" class="img " src="images/框架内容/u13.png"/>
+                  <div id="u21" class="ax_形状">
+                    <img id="u21_img" class="img " src="images/框架内容/u14.png"/>
                     <!-- Unnamed () -->
-                    <div id="u21" class="text">
+                    <div id="u22" class="text">
                       <p><span>键盘</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u22" class="ax_形状">
-                    <img id="u22_img" class="img " src="images/框架内容/u22.png"/>
+                  <div id="u23" class="ax_形状">
+                    <img id="u23_img" class="img " src="images/框架内容/u23.png"/>
                     <!-- Unnamed () -->
-                    <div id="u23" class="text">
+                    <div id="u24" class="text">
                       <p><span>按住语音分享路况</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u24" class="ax_形状">
-                    <img id="u24_img" class="img " src="images/框架内容/u13.png"/>
+                  <div id="u25" class="ax_形状">
+                    <img id="u25_img" class="img " src="images/框架内容/u14.png"/>
                     <!-- Unnamed () -->
-                    <div id="u25" class="text">
+                    <div id="u26" class="text">
                       <p><span>拍照</span></p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div id="u19_state1" class="panel_state" data-label="状态3">
-                <div id="u19_state1_content" class="panel_state_content">
+              <div id="u20_state1" class="panel_state" data-label="状态3">
+                <div id="u20_state1_content" class="panel_state_content">
 
                   <!-- Unnamed (形状) -->
-                  <div id="u26" class="ax_形状">
-                    <img id="u26_img" class="img " src="images/框架内容/u13.png"/>
+                  <div id="u27" class="ax_形状">
+                    <img id="u27_img" class="img " src="images/框架内容/u14.png"/>
                     <!-- Unnamed () -->
-                    <div id="u27" class="text">
+                    <div id="u28" class="text">
                       <p><span>语音</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u28" class="ax_形状">
-                    <img id="u28_img" class="img " src="images/框架内容/u22.png"/>
+                  <div id="u29" class="ax_形状">
+                    <img id="u29_img" class="img " src="images/框架内容/u23.png"/>
                     <!-- Unnamed () -->
-                    <div id="u29" class="text">
+                    <div id="u30" class="text">
                       <p><span>输入文字分享详细路况</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u30" class="ax_形状">
-                    <img id="u30_img" class="img " src="images/框架内容/u13.png"/>
+                  <div id="u31" class="ax_形状">
+                    <img id="u31_img" class="img " src="images/框架内容/u14.png"/>
                     <!-- Unnamed () -->
-                    <div id="u31" class="text">
+                    <div id="u32" class="text">
                       <p><span>进入</span></p>
                     </div>
                   </div>
@@ -204,69 +212,69 @@
             <!-- Unnamed (底部导航) -->
 
             <!-- 底部导航 (动态面板) -->
-            <div id="u33" class="ax_动态面板" data-label="底部导航">
-              <div id="u33_state0" class="panel_state" data-label="状态1">
-                <div id="u33_state0_content" class="panel_state_content">
+            <div id="u34" class="ax_动态面板" data-label="底部导航">
+              <div id="u34_state0" class="panel_state" data-label="状态1">
+                <div id="u34_state0_content" class="panel_state_content">
 
                   <!-- Unnamed (形状) -->
-                  <div id="u34" class="ax_形状">
-                    <img id="u34_img" class="img " src="images/框架内容/u34.png"/>
+                  <div id="u35" class="ax_形状">
+                    <img id="u35_img" class="img " src="images/框架内容/u35.png"/>
                     <!-- Unnamed () -->
-                    <div id="u35" class="text">
+                    <div id="u36" class="text">
                       <p><span></span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u36" class="ax_形状">
-                    <img id="u36_img" class="img " src="images/框架内容/u36.png"/>
+                  <div id="u37" class="ax_形状">
+                    <img id="u37_img" class="img " src="images/框架内容/u37.png"/>
                     <!-- Unnamed () -->
-                    <div id="u37" class="text">
+                    <div id="u38" class="text">
                       <p><span>ico</span></p>
                     </div>
                   </div>
 
                   <!-- paragraph (形状) -->
-                  <div id="u38" class="ax_文本" data-label="paragraph">
-                    <img id="u38_img" class="img " src="resources/images/transparent.gif"/>
+                  <div id="u39" class="ax_文本" data-label="paragraph">
+                    <img id="u39_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
-                    <div id="u39" class="text">
+                    <div id="u40" class="text">
                       <p><span>路况</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u40" class="ax_形状">
-                    <img id="u40_img" class="img " src="images/框架内容/u36.png"/>
+                  <div id="u41" class="ax_形状">
+                    <img id="u41_img" class="img " src="images/框架内容/u37.png"/>
                     <!-- Unnamed () -->
-                    <div id="u41" class="text">
+                    <div id="u42" class="text">
                       <p><span>ico</span></p>
                     </div>
                   </div>
 
                   <!-- paragraph (形状) -->
-                  <div id="u42" class="ax_文本" data-label="paragraph">
-                    <img id="u42_img" class="img " src="resources/images/transparent.gif"/>
+                  <div id="u43" class="ax_文本" data-label="paragraph">
+                    <img id="u43_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
-                    <div id="u43" class="text">
+                    <div id="u44" class="text">
                       <p><span>直播</span></p>
                     </div>
                   </div>
 
                   <!-- Unnamed (形状) -->
-                  <div id="u44" class="ax_形状">
-                    <img id="u44_img" class="img " src="images/框架内容/u36.png"/>
+                  <div id="u45" class="ax_形状">
+                    <img id="u45_img" class="img " src="images/框架内容/u37.png"/>
                     <!-- Unnamed () -->
-                    <div id="u45" class="text">
+                    <div id="u46" class="text">
                       <p><span>ico</span></p>
                     </div>
                   </div>
 
                   <!-- paragraph (形状) -->
-                  <div id="u46" class="ax_文本" data-label="paragraph">
-                    <img id="u46_img" class="img " src="resources/images/transparent.gif"/>
+                  <div id="u47" class="ax_文本" data-label="paragraph">
+                    <img id="u47_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
-                    <div id="u47" class="text">
+                    <div id="u48" class="text">
                       <p><span>发现</span></p>
                     </div>
                   </div>
@@ -275,10 +283,10 @@
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u48" class="ax_形状">
-              <img id="u48_img" class="img " src="images/框架内容/u13.png"/>
+            <div id="u49" class="ax_形状">
+              <img id="u49_img" class="img " src="images/框架内容/u14.png"/>
               <!-- Unnamed () -->
-              <div id="u49" class="text">
+              <div id="u50" class="text">
                 <p><span>方向</span></p>
               </div>
             </div>
