--- a/jglh/框架内容_13.html
+++ b/jglh/框架内容_13.html
@@ -92,7 +92,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u9" class="ax_图片">
-              <img id="u9_img" class="img " src="images/框架内容_2/u37.png"/>
+              <img id="u9_img" class="img " src="images/框架内容/u10.png"/>
               <!-- Unnamed () -->
               <div id="u10" class="text">
                 <p><span></span></p>
