--- a/jglh/框架内容_3.html
+++ b/jglh/框架内容_3.html
@@ -278,7 +278,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u48" class="ax_图片">
-              <img id="u48_img" class="img " src="images/框架内容_2/u37.png"/>
+              <img id="u48_img" class="img " src="images/框架内容/u10.png"/>
               <!-- Unnamed () -->
               <div id="u49" class="text">
                 <p><span></span></p>
