--- a/jglh/框架内容_5.html
+++ b/jglh/框架内容_5.html
@@ -70,7 +70,7 @@
 
                   <!-- Unnamed (图片) -->
                   <div id="u4" class="ax_图片">
-                    <img id="u4_img" class="img " src="images/框架内容_2/u37.png"/>
+                    <img id="u4_img" class="img " src="images/框架内容/u10.png"/>
                     <!-- Unnamed () -->
                     <div id="u5" class="text">
                       <p><span></span></p>
