--- a/jglh/框架内容_7.html
+++ b/jglh/框架内容_7.html
@@ -65,7 +65,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u3" class="ax_图片">
-              <img id="u3_img" class="img " src="images/框架内容_2/u37.png"/>
+              <img id="u3_img" class="img " src="images/框架内容/u10.png"/>
               <!-- Unnamed () -->
               <div id="u4" class="text">
                 <p><span></span></p>
