--- a/jglh/框架内容_9.html
+++ b/jglh/框架内容_9.html
@@ -83,7 +83,7 @@
 
             <!-- Unnamed (图片) -->
             <div id="u7" class="ax_图片">
-              <img id="u7_img" class="img " src="images/框架内容_2/u37.png"/>
+              <img id="u7_img" class="img " src="images/框架内容/u10.png"/>
               <!-- Unnamed () -->
               <div id="u8" class="text">
                 <p><span></span></p>
