Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>氪记生活 by lisker</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -35,21 +35,11 @@
 
 <p>名称 | 原型链接 | 描述 | 备注
 ----|------|----
-注册登录 | <a href="http://lisker.github.io/mbx/start.html">v20150422</a>  | 个人中心更新| 2015.05.12 更新</p>
-
-<h3>
-<a id="数据分析后台" class="anchor" href="#%E6%95%B0%E6%8D%AE%E5%88%86%E6%9E%90%E5%90%8E%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a>数据分析后台</h3>
+4.0版本 | <a href="http://lisker.github.io/demo/jglh/start.html">v20150422</a>  | 路况导航、直播互动 | 2015.06.09 更新</p>
 
 <p>名称 | 原型链接 | 描述 | 备注
 ----|------|----
-管理后台 | <a href="http://lisker.github.io/ztdl/start.html">v20150410</a>  | 数据整理、报告查看| 2015.04.10 更新</p>
-
-<h3>
-<a id="健将app" class="anchor" href="#%E5%81%A5%E5%B0%86app" aria-hidden="true"><span class="octicon octicon-link"></span></a>健将APP</h3>
-
-<p>名称 | 原型链接 | 描述 | 备注
-----|------|----
-注册登录 | <a href="http://lisker.github.io/zhuce/start.html">v20150422</a>  | APP注册引导流程更新| 2015.04.22 更新</p>
+萌宝秀活动 | <a href="http://lisker.github.io/demo/mbx/start.html">v20150422</a>  | 个人中心更新| 2015.05.12 更新</p>
       </section>
     </div>
     <footer>
