--- a/demo/index.html
+++ b/demo/index.html
@@ -443,7 +443,7 @@ pre[class*="language-"] {
 <body>
 <h2 id="toc_0">原型综合浏览页</h2>
 
-<p>项目原型集纳展示页，本页固定地址：<a href="http://lisker.github.io">http://lisker.github.io</a></p>
+<p>项目原型集纳展示页，本页固定地址：<a href="http://lisker.github.io/demo">http://lisker.github.io/demo</a></p>
 
 <h3 id="toc_1">交广领航</h3>
 
