--- a/demo/index.html
+++ b/demo/index.html
@@ -480,7 +480,7 @@ pre[class*="language-"] {
 <tbody>
 <tr>
 <td>萌宝秀活动</td>
-<td><a href="http://lisker.github.io/demo/jglh/start.html">20150512</a></td>
+<td><a href="http://lisker.github.io/demo/mbx/start.html">20150512</a></td>
 <td>个人中心更新</td>
 <td>2015.05.12 更新</td>
 </tr>
